# rust-personal-finances

./: .gitignore  BOOKMARKS.md  COMMANDS.md  LICENSE  README.md  TODO.md  main.py  personal-finance.drawio  seed.ps1  setup-db.py
api/: accounts.py  transactions.py  users.py
backend/: Cargo.toml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20231015_180325_create_users_table.rs  m20231015_183517_create_accounts_table.rs  m20231015_192911_create_transactions_table.rs  m20231015_194732_seed_data.rs
backend/migration/src/entity/: accounts.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  transactions.rs  users.rs
backend/sql/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
backend/src/: db.rs  main.rs
backend/src/_tests/: model_db.rs  model_finances.rs  model_structures_account.rs  model_structures_transaction.rs  model_structures_user.rs  web_account.rs  web_transaction.rs  web_user.rs
backend/src/endpoints/: account.rs  mod.rs  user.rs
backend/src/model/: db.rs  finances.rs  mod.rs  reference.rs.default
backend/src/model/structures/: account.rs  mod.rs  transaction.rs  user.rs
backend/src/security/: mod.rs
backend/src/structures/: account.rs  mod.rs  user.rs
backend/src/web/: account.rs  mod.rs  transaction.rs  user.rs
frontend/: package.json
frontend/web-folder/: index.html
static/css/: style.css
static/javascript/: base.js  edit_transaction.js  new_account.js  new_account_type.js  new_transaction.js  new_transaction_category.js  new_transaction_type.js  new_user.js  new_vendor.js
templates/: account_overview.html  base.html  edit_transaction.html  index.html  new_account.html  new_account_type.html  new_transaction.html  new_transaction_category.html  new_transaction_type.html  new_user.html  new_vendor.html
