[package]
name = "personal_finance"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
futures = "0.3.28"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
sqlb = "0.4.0"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
warp = "0.3.6"
