[package]
name = "personal_finance"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
sqlb = "0.4.0"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio-rustls", "time", "uuid", ] }
thiserror = "1.0.49"
time = "0.3.29"
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4", "v7"] }
warp = "0.3.6"

[dev-dependencies]
anyhow = "1.0.75"