[package]
name = "personal_finance"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
sea-query = { version = "0.30.2", features = ["bigdecimal", "postgres-array", "postgres-interval", "postgres-types", "serde_json", "uuid", "with-bigdecimal", "with-uuid", "time", "with-time", "postgres-array"] }
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
sqlb = "0.4.0"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio-rustls", "time", "uuid"] }
thiserror = "1.0.49"
time = { version = "0.3.29", features = [ "serde" ] }
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4", "v7", "serde"] }
poem = { version = "1.3.58", features = ["rustls", "compression", "cookie", "static-files"] }
tracing-subscriber = "0.3.17"
poem-openapi = { version = "3.0.5", features = ["swagger-ui", "uuid", "time", "openapi-explorer", "redoc", "rapidoc"] }
color-eyre = "0.6.2"
sea-orm = { version = "0.12.3", features = ["sqlx", "sqlx-postgres"] }

[dev-dependencies]
anyhow = "1.0.75"
